--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,21 +1,73 @@
-CC=i686-elf-gcc
+HOST?=i686-elf
+HOSTARCH=i386
 
 CFLAGS?=-O2 -g
+CPPFLAGS?=
+LDFLAGS?=
 LIBS?=
-ARCHDIR=arch/i386
 
-CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra -Iinclude -I../include
-LIBS:=$(LIBS) -nostdlib -lgcc
+DESTDIR?=
+PREFIX?=/usr/local
+EXEC_PREFIX?=$(PREFIX)
+BOOTDIR?=$(EXEC_PREFIX)/boot
+INCLUDEDIR?=$(PREFIX)/include
+
+CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra -I../include
+CPPFLAGS:=$(CPPFLAGS) -D__is_kernel -Iinclude
+LDFLAGS:=$(LDFLAGS)
+LIBS:=$(LIBS) -nostdlib -lk -lgcc
+
+ARCHDIR=arch/$(HOSTARCH)
+
+include $(ARCHDIR)/make.config
+
+CFLAGS:=$(CFLAGS)
+CPPFLAGS:=$(CPPFLAGS)
+LDFLAGS:=$(LDFLAGS)
+LIBS:=$(LIBS)
+
 KERNEL_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/io.o \
 kernel/kernel.o \
 
-all: ukernel.os
+OBJS=\
+$(KERNEL_OBJS) \
 
-ukernel.os: $(KERNEL_OBJS) $(ARCHDIR)/linker.ld
-	$(CC) -T $(ARCHDIR)/linker.ld -o $@ $(CFLAGS) $(LIBS) $(KERNEL_OBJS)
-	cp ukernel.os ../isodir/boot/ukernel.bin
+LINK_LIST=\
+$(LDFLAGS) \
+$(KERNEL_OBJS) \
+$(LIBS) \
+
+.PHONY: all clean install install-headers install-kernel
+.SUFFIXES: .o .c .S
+
+all: os.kernel
+
+os.kernel: $(OBJS) $(ARCHDIR)/linker.ld
+	$(CC) -T $(ARCHDIR)/linker.ld -o $@ $(CFLAGS) $(LINK_LIST)
+	grub2-file --is-x86-multiboot os.kernel
+
+.c.o:
+	$(CC) -MD -c $< -o $@ -std=gnu11 $(CFLAGS) $(CPPFLAGS)
+
+.S.o:
+	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
 
 clean:
-	rm ./*.o ./*.bin ./*.iso ../isodir/boot/*.bin
+	rm -f os.kernel
+	rm -f $(OBJS) *.o */*.o */*/*.o
+	rm -f $(OBJS:.o=.d) *.d */*.d */*/*.d
+
+install: install-headers install-kernel
+
+install-headers:
+	mkdir -p $(DESTDIR)$(INCLUDEDIR)
+	cp -R --preserve=timestamps include/. $(DESTDIR)$(INCLUDEDIR)/.
+
+install-kernel: os.kernel
+	mkdir -p $(DESTDIR)$(BOOTDIR)
+	cp os.kernel $(DESTDIR)$(BOOTDIR)
+
+-include $(OBJS:.o=.d)
