--- a/libc/Makefile
+++ b/libc/Makefile
@@ -1,25 +1,77 @@
-
-CC=i686-elf-gcc
-AR=i686-elf-ar
+HOST?=i686-elf
+HOSTARCH=i386
 
 CFLAGS?=-O2 -g
+CPPFLAGS?=
+LDFLAGS?=
 LIBS?=
-ARCHDIR=arch/i386
 
-CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra -Iinclude -I../include
-LIBS:=$(LIBS) -nostdlib -lgcc
-LIBC_OBJS=\
+DESTDIR?=
+PREFIX?=/usr/local
+EXEC_PREFIX?=$(PREFIX)
+INCLUDEDIR?=$(PREFIX)/include
+LIBDIR?=$(EXEC_PREFIX)/lib
+
+CFLAGS:=$(CFLAGS) -ffreestanding -Wall -Wextra -I../include
+CPPFLAGS:=$(CPPFLAGS) -D__is_libc -Iinclude
+LIBK_CFLAGS:=$(CFLAGS)
+LIBK_CPPFLAGS:=$(CPPFLAGS) -D__is_libk
+
+ARCHDIR=arch/$(HOSTARCH)
+
+CFLAGS:=$(CFLAGS)
+CPPFLAGS:=$(CPPFLAGS)
+LIBK_CFLAGS:=$(LIBK_CFLAGS)
+LIBK_CPPFLAGS:=$(LIBK_CPPFLAGS)
+
+FREEOBJS=\
 string/strlen.o \
 
-.SUFFIXES: .o .c
+OBJS=\
+$(FREEOBJS) \
 
-all: libc.a
+LIBK_OBJS=$(FREEOBJS:.o=.libk.o)
 
-libc.a: $(LIBC_OBJS)
-	$(AR) rcs $@ $(LIBC_OBJS)
+#BINARIES=libc.a libk.a # Not ready for libc yet.
+BINARIES=libk.a
+
+.PHONY: all clean install install-headers install-libs
+.SUFFIXES: .o .libk.o .c .S
+
+all: $(BINARIES)
+
+libc.a: $(OBJS)
+	$(AR) rcs $@ $(OBJS)
+
+libk.a: $(LIBK_OBJS)
+	$(AR) rcs $@ $(LIBK_OBJS)
 
 .c.o:
-	$(CC) -MD -c $< -o $@ -std=gnu11 $(CFLAGS)
+	$(CC) -MD -c $< -o $@ -std=gnu11 $(CFLAGS) $(CPPFLAGS)
+
+.c.S:
+	$(CC) -MD -c $< -o $@ $(CFLAGS) $(CPPFLAGS)
+
+.c.libk.o:
+	$(CC) -MD -c $< -o $@ -std=gnu11 $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
+
+.S.libk.o:
+	$(CC) -MD -c $< -o $@ $(LIBK_CFLAGS) $(LIBK_CPPFLAGS)
 
 clean:
-	rm ./*.o ./*.bin ./*.iso ../isodir/boot/*.bin
+	rm -f $(BINARIES) *.a
+	rm -f $(OBJS) $(LIBK_OBJS) *.o */*.o */*/*.o
+	rm -f $(OBJS:.o=.d) $(LIBK_OBJS:.o=.d) *.d */*.d */*/*.d
+
+install: install-headers install-libs
+
+install-headers:
+	mkdir -p $(DESTDIR)$(INCLUDEDIR)
+	cp -R --preserve=timestamps include/. $(DESTDIR)$(INCLUDEDIR)/.
+
+install-libs: $(BINARIES)
+	mkdir -p $(DESTDIR)$(LIBDIR)
+	cp $(BINARIES) $(DESTDIR)$(LIBDIR)
+
+-include $(OBJS:.o=.d)
+-include $(LIBK_OBJS:.o=.d)
